argocd/k8s/miniflux/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: miniflux-http-route
  namespace: miniflux
spec:
  parentRefs:
    - name: homelab-gw
      namespace: cilium-gateway
      sectionName: homelab-https
  hostnames:
    - "miniflux.homelab.ikabbash.com" 
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: miniflux
          port: 80
