argocd/k8s/miniflux/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: miniflux-network-policy
  namespace: miniflux
specs:
  - endpointSelector:
      matchLabels:
        app: miniflux
    ingress:
      - fromEntities:
          - ingress
    egress:
      - toEntities:
          - all
  # Any other pod in the same namespace deny everything
  - endpointSelector: {}
    ingress:
      - {}
    egress:
      - {}
